# pr2_rubiks_solver

./: .gitignore  stack.xml
rubiks_graph/: cmake_install.cmake  mainpage.dox  manifest.xml
rubiks_graph/RCube/: LD_D_A.pos  LD_D_E.pos  LD_D_F.pos  LD_Di_C.pos  LD_Di_E.pos  LD_L_A.pos  LD_L_B.pos  LD_L_D.pos  LD_L_E.pos  LD_L_F.pos  LD_L_G.pos  LD_Li_E.pos  LD_Li_F.pos  LU_D_A.pos  LU_D_D.pos  LU_D_F.pos  LU_Di_C.pos  LU_Di_F.pos  LU_RF_A.pos  LU_RF_B.pos  LU_R_B.pos  LU_R_E.pos  LU_R_F.pos  LU_R_G.pos  LU_Ri_D.pos  LU_Ri_F.pos  RB_B_A.pos  RB_B_B.pos  RB_B_C.pos  RB_B_E.pos  RB_B_F.pos  RB_B_H.pos  RB_LU_A.pos  RB_LU_B.pos  RB_U_A.pos  RB_U_D.pos  RB_U_E.pos  RB_U_F.pos  RB_Ui_C.pos  RB_Ui_D.pos  (+26 more)
rubiks_graph/RCube_bak/: LD_D_A.pos  LD_D_B.pos  LD_D_C.pos  LD_D_D.pos  LD_Di_D.pos  LD_Di_F.pos  LD_L_C.pos  LD_L_H.pos  LD_Li_D.pos  LD_Li_G.pos  LD_Li_H.pos  LD_RB_A.pos  LD_RB_B.pos  LD_RB_C.pos  LU_D_B.pos  (+44 more)
rubiks_inspect/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
rubiks_solver/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
rubiks_solver/src/: kcube.cpp  solver_node.cpp
rubiks_solver/src/rubiks_solver/srv/: _SolveService.py  __init__.py
rubiks_solver/src/solvelib/: README.TXT  Timer.cpp  Timer.h  combinat.cpp  combinat.h  cube.cpp  cube.h  cubepars.cpp  cubepars.h  facecube.cpp  facecube.h  kocicube.cpp  kocicube.h  kocimovt.h  movetabl.cpp  movetabl.h  pruningt.cpp  pruningt.h  solver.cpp  solver.h  vector.cpp  vector.h
rubiks_solver/srv/: SolveService.srv
rubiks_solver/srv/lisp/rubiks_solver/: rubiks_solver-srv.asd
(+26 files in other folders)
